new annotations
Signed-off-by: Thang PHAM <phamthang37@gmail.com>